--- a/css/buttons.css
+++ b/css/buttons.css
@@ -11,11 +11,20 @@ h1, h2, h3, h4, h5, h6{
 }
 h2{
     text-align: center;
+    margin: 20px auto;
+    margin-bottom: 0;
+    margin-top: 1em;
+    border-top: 2px solid #2fcc71;
+    border-bottom: 2px solid #2fcc71;
+
+    max-width: 40%;
+
 }
 
 h1{
     text-align: center;
     padding-bottom: 10px;
+    padding-top: 2em;
     border-bottom: 2px solid #2fcc71;
     max-width: 40%;
     margin: 20px auto;
