--- a/scss/text.css
+++ b/scss/text.css
@@ -51,6 +51,9 @@ input.textl {
       color: rgba(0, 0, 0, 0.5); }
     input.textl:disabled ~ bar {
       background-color: blue; }
+  input.textl[type=date] ~ label {
+    top: 0;
+    font: 700 22px Roboto; }
   input.textl:focus {
     outline: none; }
     input.textl:focus ~ label {
