--- a/css/buttons.css
+++ b/css/buttons.css
@@ -37,6 +37,7 @@ h1{
 .three { width: 32.26%; max-width: 32.26%;}
 .four { width: 23%; max-width: 24%;}
 .five { width: 18%; max-width: 20%;}
+.six { width: 15.2%; max-width: 16.666%;}
 
 
 
