added 0 to various, option for 7-way multi

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -38,7 +38,7 @@ h1{
 .four { width: 23%; max-width: 24%;}
 .five { width: 18%; max-width: 20%;}
 .six { width: 15.2%; max-width: 16.666%;}
-
+.six { width: 13.4%; max-width: 14.28%;}
 
 
 /* COLUMNS */
