--- a/css/checkmark.css
+++ b/css/checkmark.css
@@ -11,8 +11,10 @@ html {
     display: none;
 }
 .checkmark_label{
-    font-size: calc(1rem + 1vw);
+    /*font-size: calc(1rem + 1vw);*/
+    font-size: 20px;
     display: block;
+    line-height: 100px;
 }
 .label__check {
     display: inline-block;
@@ -21,8 +23,8 @@ html {
     background: white;
     vertical-align: middle;
     margin-right: 20px;
-    width: 2em;
-    height: 2em;
+    width: 1em;
+    height: 1em;
     cursor: pointer;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -38,7 +40,7 @@ html {
 }
 .label__check i.icon {
     opacity: 0.2;
-    font-size: calc(1rem + 1vw);
+    font-size: 0.3em;
     color: transparent;
     -webkit-transition: opacity .3s .1s ease;
     transition: opacity .3s .1s ease;
@@ -50,6 +52,7 @@ html {
 .label__checkbox:checked + .label__text .label__check {
     -webkit-animation: check 0.5s cubic-bezier(0.895, 0.03, 0.685, 0.22) forwards;
     animation: check 0.5s cubic-bezier(0.895, 0.03, 0.685, 0.22) forwards;
+    font-size: 20px;
 }
 .label__checkbox:checked + .label__text .label__check .icon {
     opacity: 1;
@@ -57,6 +60,7 @@ html {
     -webkit-text-stroke: 0;
     -webkit-animation: icon 0.3s cubic-bezier(1, 0.008, 0.565, 1.65) 0.1s 1 forwards;
     animation: icon 0.3s cubic-bezier(1, 0.008, 0.565, 1.65) 0.1s 1 forwards;
+    font-size: 22px;
 }
 .center {
     position: absolute;
