--- a/scss/text.css
+++ b/scss/text.css
@@ -2,7 +2,9 @@
   box-sizing: border-box; }
 
 body {
-  background: white; }
+  background: white; 
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
 .centered {
   width: 550px;
@@ -19,15 +21,17 @@ body {
   height: 110px;
   overflow: hidden;
   position: relative;
-  display: inline-block; }
+  display: inline-block; 
+}
 
 label.textl {
   position: absolute;
   top: 36.6666666667px;
   color: rgba(0, 0, 0, 0.5);
-  font: 400 36.6666666667px Roboto;
   cursor: text;
-  transition: .25s ease; }
+  transition: .25s ease; 
+  font-size: 20px;
+}
 
 input.textl {
   display: block;
@@ -37,17 +41,15 @@ input.textl {
   border-radius: 0;
   color: black;
   background: white;
-  font-size: 36.6666666667px;
+  font-size: 22px;
   transition: .3s ease; }
   input.textl:valid ~ label {
     top: 0;
-    font: 700 22px Roboto;
     color: rgba(0, 0, 0, 0.6); }
   input.textl:disabled {
     color: rgba(0, 0, 0, 0.6); }
     input.textl:disabled ~ label {
       top: 0;
-      font: 700 22px Roboto;
       color: rgba(0, 0, 0, 0.5); }
     input.textl:disabled ~ bar {
       background-color: blue; }
@@ -55,13 +57,11 @@ input.textl {
     color: rgba(0, 0, 0, 0.6); }
     input.textl[type=date] ~ label {
       top: 0;
-      font: 700 22px Roboto;
       color: rgba(0, 0, 0, 0.5); }
   input.textl:focus {
     outline: none; }
     input.textl:focus ~ label {
       top: 0;
-      font: 700 22px Roboto;
       color: #2fcc71; }
     input.textl:focus ~ .bar:before {
       transform: translateX(0); }
@@ -72,8 +72,8 @@ input.textl {
 .bar {
   background: rgba(0, 0, 0, 0.5);
   content: '';
-  width: 70%;
-  height: 3.6666666667px;
+  width: 100%;
+  height: 3px;
   transition: .3s ease;
   position: relative; }
   .bar:before {
